--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^4.9.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0"
+    "react-router": "^4.0.0",
+    "superagent": "^3.5.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
